Change hero slider's height from vh to % for fix bug on mobile

--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -97,6 +97,9 @@
       > span {
          font-size: 0;
       }
+      &:hover {
+         border: none;
+      }
    }
 }
 
