--- a/assets/css/_hero-silder.scss
+++ b/assets/css/_hero-silder.scss
@@ -1,5 +1,5 @@
 .hero-slider {
-   height: 100vh;
+   height: 100%;
    .wrapper {
       height: 100vh;
       display: flex;
