--- a/assets/css/_mixin.scss
+++ b/assets/css/_mixin.scss
@@ -77,7 +77,7 @@
 
 // ============  Responsive Mixin (Desktop First)  ============ //
 @mixin xl {
-   @media screen and (max-width: 1919px) {
+   @media screen and (max-width: 1439px) {
       @content;
    }
 }
